--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,19 @@ input{
   align-items: center;
   margin-bottom: 10px;
 }
+
+.image{
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.image svg{
+  margin: 10px 5px;
+  width: 100%;
+  height: 60px;
+  z-index: 3;
+}
+.image .hand-logo svg{
+  width: 50%;
+}
